--- a/banner.conf
+++ b/banner.conf
@@ -16,5 +16,5 @@
 <font color="red"><b> Auto Reboot Server : 00.00 </b></font><br>
 <br>
 <font color="green"><b> *╔═══❖•ೋ° °ೋ•❖═══╗* </b></font><br>
-<font color="red"><b>-{-------THIRASTORE-------}-</font><br>
+<font color="red"><b>-{-------ZEXS-------}-</font><br>
 <font color="green"><b> *╚═══❖•ೋ° °ೋ•❖═══╝* </b></font></font></br></h5>
